// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a SlideGroup with animation enabled 1`] = `
<div
  className="slide-group"
>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={true}
      exit={true}
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={false}
      >
        <div>
          First
        </div>
      </Slide>
    </CSSTransition>
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={true}
      exit={true}
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={false}
      >
        <div>
          Second
        </div>
      </Slide>
    </CSSTransition>
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={true}
      exit={true}
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={false}
      >
        <div>
          Third
        </div>
      </Slide>
    </CSSTransition>
  </TransitionGroup>
</div>
`;

exports[`should render a default SlideGroup 1`] = `
<div
  className="slide-group"
>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={false}
      exit={false}
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={true}
      >
        <div>
          First
        </div>
      </Slide>
    </CSSTransition>
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={false}
      exit={false}
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={true}
      >
        <div>
          Second
        </div>
      </Slide>
    </CSSTransition>
    <CSSTransition
      classNames={
        Object {
          "enter": "enter",
          "enterActive": "enter-active",
          "exit": "exit",
          "exitActive": "exit-active",
        }
      }
      enter={false}
      exit={false}
      onEntered={[Function]}
      onExit={[Function]}
      timeout={300}
    >
      <Slide
        isHidden={false}
      >
        <div>
          Third
        </div>
      </Slide>
    </CSSTransition>
  </TransitionGroup>
</div>
`;
